--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,8 @@
 @import "./components/Header/header";
 @import "./components/footer";
 @import "./components/Services/services";
+@import "./components/Statistics/statistics";
+@import "./components/UsefullLinks/usefullLinks";
 
 // Pages
 @import "./page/home";
