--- a/src/styles/components/Statistics/_statistics.scss
+++ b/src/styles/components/Statistics/_statistics.scss
@@ -4,6 +4,7 @@
   .section-inner {
     margin: 40px 0;
     position: relative;
+    padding: 0 80px;
 
     .swiper-wrapper {
       padding: 40px 0;
