--- a/src/styles/components/News/_news.scss
+++ b/src/styles/components/News/_news.scss
@@ -20,6 +20,12 @@
         gap: 10px;
         position: relative;
 
+        transition: box-shadow 0.4s;
+
+        &:hover {
+          box-shadow: -5px 5px 20px rgba(40, 91, 173, 0.2);
+        }
+
         img {
           width: 100%;
           height: 170px;
