--- a/src/styles/components/OurSystems/_our-systems.scss
+++ b/src/styles/components/OurSystems/_our-systems.scss
@@ -23,6 +23,12 @@
         box-shadow: -5px 5px 15px rgba(40, 91, 173, 0.1);
         color: #000;
 
+        transition: box-shadow 0.4s;
+
+        &:hover {
+          box-shadow: -5px 5px 20px rgba(40, 91, 173, 0.2);
+        }
+
         img,
         svg {
           background-color: #91b5f8;
