--- a/src/styles/components/Statistics/_statistics.scss
+++ b/src/styles/components/Statistics/_statistics.scss
@@ -15,8 +15,18 @@
         border-radius: 10px;
         height: 150px;
         box-shadow: -5px 5px 15px rgb(40 91 173 / 15%);
+
         display: grid;
         place-items: center;
+        transition: box-shadow 0.4s;
+
+        & > div {
+          text-align: center;
+        }
+
+        &:hover {
+          box-shadow: -5px 5px 20px rgba(40, 91, 173, 0.2);
+        }
 
         h3 {
           font-size: 36px;
