--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -9,10 +9,9 @@ footer {
 
   .footer-inner {
     display: flex;
-    gap: 30px;
+    gap: 50px;
 
     .col {
-      flex: 25% !important;
       display: flex;
       flex-direction: column;
       align-items: start;
@@ -34,8 +33,7 @@ footer {
       }
 
       &.col-1 {
-        flex: 45% !important;
-
+        width: 400px;
         .logo {
           display: flex;
           align-items: center;
@@ -46,10 +44,14 @@ footer {
           img {
             background-color: #fff;
             border-radius: 50%;
-            width: 150px;
-            height: 150px;
+            width: 100px;
+            height: 100px;
           }
         }
+      }
+
+      &.col-3 {
+        width: 400px;
       }
 
       .menu {
