--- a/src/styles/UI/_select.scss
+++ b/src/styles/UI/_select.scss
@@ -1,22 +1,72 @@
 .select-item {
   position: relative;
 
-  .selected {
-    text-transform: capitalize;
-    padding: 7px;
-    cursor: pointer;
+  border-right: 1px solid #ddd;
+
+  &:last-child {
+    border: none !important;
   }
 
-  .menu {
+  & > .menu {
+    padding-top: 15px;
     position: absolute;
+    top: 100%;
+    left: 0%;
     background-color: #fff;
-    box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
     min-width: 120px;
-    max-height: 0px;
-    opacity: 0;
-    overflow: hidden;
+    max-width: 400px !important;
+    width: 100% !important;
 
-    transition: max-height 0.5s ease-in, opacity 0.3s;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    .select-item {
+      position: relative;
+      padding: 0 !important;
+
+      .selected {
+        padding: 0 !important;
+      }
+
+      .inner-menu {
+        top: 0;
+        left: 110%;
+
+        transform: translateX(-60%);
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+
+        transition: transform 0.4s;
+
+        .inner-item {
+          padding: 12px;
+        }
+      }
+
+      &:hover {
+        .inner-menu {
+          transform: translateX(0);
+          opacity: 1;
+          visibility: visible;
+          pointer-events: all;
+        }
+      }
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 0;
+      background-color: $bs-orange;
+      width: 100%;
+      height: 4px;
+    }
+
+    transition: opacity 0.3s, visibility 0.3s;
 
     .menu-item {
       padding: 12px;
@@ -26,9 +76,19 @@
   }
 
   &:hover {
-    .menu {
-      max-height: 600px !important;
+    & > .menu {
       opacity: 1;
+      visibility: visible;
+      pointer-events: all;
     }
+  }
+
+  .selected {
+    text-transform: capitalize;
+    padding: 7px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 20px;
   }
 }
