--- a/src/styles/components/Banner/_banner.scss
+++ b/src/styles/components/Banner/_banner.scss
@@ -2,6 +2,7 @@
   margin: 10px 0;
   .container {
     position: relative;
+    overflow: hidden;
 
     .swiper {
       border-radius: 25px;
@@ -35,6 +36,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-size: 20px;
 
         transition: transform 0.3s, opacity 0.3s;
 
