--- a/src/styles/components/News/_news.scss
+++ b/src/styles/components/News/_news.scss
@@ -5,13 +5,12 @@
 
   .section-inner {
     position: relative;
-    padding: 40px 0;
 
     .swiper {
       margin: 30px 0;
       padding: 20px;
+
       .swiper-slide {
-        max-width: 300px;
         background-color: #fff;
         box-shadow: -5px 5px 15px rgba(40, 91, 173, 0.1);
         border-radius: 20px;
@@ -56,22 +55,27 @@
             bottom: 0;
             right: 0;
             background-color: $light-blue;
-            font-size: 16px !important;
+            font-size: 16px;
           }
         }
       }
     }
 
-    .my-btn {
+    & > .my-btn {
       position: absolute;
-      bottom: 0;
+      top: 100%;
       right: 0;
       cursor: pointer;
+      font-size: 16px !important;
+
+      svg {
+        font-size: 20px !important;
+      }
     }
 
     .custom-navigation {
       position: absolute;
-      top: 40px;
+      bottom: 105%;
       right: 0;
 
       display: flex;
