--- a/src/styles/common/_responsive.scss
+++ b/src/styles/common/_responsive.scss
@@ -188,10 +188,7 @@
   // Banner
   .section-banner {
     .custom-navigation {
-      button {
-        font-size: 12px !important;
-        padding: 4px !important;
-      }
+      display: none !important;
     }
 
     .swiper {
