--- a/src/styles/components/News/_news.scss
+++ b/src/styles/components/News/_news.scss
@@ -1,7 +1,68 @@
+@mixin newsItem() {
+  background-color: #fff;
+  box-shadow: -5px 5px 15px rgba(40, 91, 173, 0.1);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: relative;
+
+  transition: box-shadow 0.4s;
+
+  &:hover {
+    box-shadow: -5px 5px 20px rgba(40, 91, 173, 0.2);
+  }
+
+  img {
+    width: 100%;
+    height: 170px;
+    object-fit: cover;
+  }
+
+  .body {
+    padding: 12px;
+    min-height: 230px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    .date {
+      font-size: 12px;
+      color: #00000066;
+    }
+
+    .desc {
+      font-size: 14px;
+      color: #00000066;
+    }
+
+    .my-btn {
+      border-radius: 20px 0 20px 0;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      background-color: $light-blue;
+      font-size: 16px;
+    }
+  }
+}
+
 .section-news,
 .section-announcements {
   background-color: #fff !important;
   padding: 10px 0 30px;
+
+  .news-grid_box {
+    display: grid !important;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    margin: 40px 0;
+
+    .news-item {
+      @include newsItem();
+    }
+  }
 
   .section-inner {
     position: relative;
@@ -11,53 +72,7 @@
       padding: 20px;
 
       .swiper-slide {
-        background-color: #fff;
-        box-shadow: -5px 5px 15px rgba(40, 91, 173, 0.1);
-        border-radius: 20px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        position: relative;
-
-        transition: box-shadow 0.4s;
-
-        &:hover {
-          box-shadow: -5px 5px 20px rgba(40, 91, 173, 0.2);
-        }
-
-        img {
-          width: 100%;
-          height: 170px;
-          object-fit: cover;
-        }
-
-        .body {
-          padding: 12px;
-          min-height: 230px;
-
-          display: flex;
-          flex-direction: column;
-          gap: 15px;
-
-          .date {
-            font-size: 12px;
-            color: #00000066;
-          }
-
-          .desc {
-            font-size: 14px;
-            color: #00000066;
-          }
-
-          .my-btn {
-            border-radius: 20px 0 20px 0;
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            background-color: $light-blue;
-            font-size: 16px;
-          }
-        }
+        @include newsItem();
       }
     }
 
