--- a/src/styles/components/News/_news.scss
+++ b/src/styles/components/News/_news.scss
@@ -99,6 +99,13 @@
         }
       }
     }
+
+    #all-news_link {
+      color: $bs-blue;
+      position: absolute;
+      top: 103%;
+      right: 0;
+    }
   }
 }
 
