--- a/src/styles/UI/_select.scss
+++ b/src/styles/UI/_select.scss
@@ -19,13 +19,15 @@
     padding-top: 15px;
     position: absolute;
     top: 100%;
-    left: -50%;
+    left: 0;
     background-color: #fff;
     box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
     min-width: 300px;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    display: flex;
+    flex-direction: column;
 
     transition: opacity 0.3s, visibility 0.3s;
 
@@ -76,6 +78,9 @@
     .menu-item {
       padding: 12px;
       cursor: pointer;
+      color: #000;
+      width: 100%;
+      height: 100%;
     }
   }
 
